// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BaseDialog Snapshot Tests matches snapshot with all props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="shrink-0 px-8 pt-8"
  >
    <div
      class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
      data-test="dialog-title"
    >
      Test Dialog
    </div>
  </header>
  <div
    class="overflow-auto"
    data-test="dialog-body"
  >
    <div
      class="flex flex-col gap-8 px-8 pb-8 pt-2"
    >
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
        data-test="body"
      >
        This is a description
      </div>
      <div
        data-test="dialog-header-content"
      >
        <div>
          Header Content
        </div>
      </div>
    </div>
    <div
      class="shadow-t"
    >
      <div>
        Dialog Content
      </div>
    </div>
  </div>
  <div
    class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      data-test="dialog-action"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`BaseDialog Snapshot Tests matches snapshot with basic props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="shrink-0 px-8 pt-8 pb-8"
  >
    <div
      class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
      data-test="dialog-title"
    >
      Test Dialog
    </div>
  </header>
  <div
    class="overflow-auto"
    data-test="dialog-body"
  >
    <div
      class="shadow-t"
    >
      <div>
        Dialog Content
      </div>
    </div>
  </div>
  <div
    class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      data-test="dialog-action"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`BaseDialog Snapshot Tests matches snapshot with closed dialog 1`] = `null`;

exports[`BaseDialog Snapshot Tests matches snapshot with form 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <form
    class="flex max-h-[calc(100vh-10rem)] flex-col"
    id="test-form"
  >
    <header
      class="shrink-0 px-8 pt-8 pb-8"
    >
      <div
        class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
        data-test="dialog-title"
      >
        Test Dialog
      </div>
    </header>
    <div
      class="overflow-auto"
      data-test="dialog-body"
    >
      <div
        class="shadow-t"
      >
        <div>
          Form Content
        </div>
      </div>
    </div>
    <div
      class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
    >
      <button
        data-test="dialog-action"
      >
        OK
      </button>
    </div>
  </form>
</div>
`;

exports[`BaseDialog Snapshot Tests matches snapshot with headerContent 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="shrink-0 px-8 pt-8"
  >
    <div
      class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
      data-test="dialog-title"
    >
      Test Dialog
    </div>
  </header>
  <div
    class="overflow-auto"
    data-test="dialog-body"
  >
    <div
      class="flex flex-col gap-8 px-8 pb-8 pt-2"
    >
      <div
        data-test="dialog-header-content"
      >
        <div
          data-test="header-content"
        >
          Header Content
        </div>
      </div>
    </div>
    <div
      class="shadow-t"
    >
      <div>
        Dialog Content
      </div>
    </div>
  </div>
  <div
    class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      data-test="dialog-action"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`BaseDialog Snapshot Tests matches snapshot with title and description 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="shrink-0 px-8 pt-8"
  >
    <div
      class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
      data-test="dialog-title"
    >
      Test Dialog
    </div>
  </header>
  <div
    class="overflow-auto"
    data-test="dialog-body"
  >
    <div
      class="flex flex-col gap-8 px-8 pb-8 pt-2"
    >
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
        data-test="body"
      >
        This is a description
      </div>
    </div>
    <div
      class="shadow-t"
    >
      <div>
        Dialog Content
      </div>
    </div>
  </div>
  <div
    class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      data-test="dialog-action"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`BaseDialog Snapshot Tests matches snapshot without children 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper max-h-[calc(100vh-10rem)] MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl my-0 rounded-xl z-dialog max-w-full shadow-xl mx-auto css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <header
    class="shrink-0 px-8 pt-8"
  >
    <div
      class=MuiTypography-root MuiTypography-subhead1 whitespace-pre-line css-hash-MuiTypography-root
      data-test="dialog-title"
    >
      Test Dialog
    </div>
  </header>
  <div
    class="overflow-auto"
    data-test="dialog-body"
  >
    <div
      class="flex flex-col gap-8 px-8 pb-8 pt-2"
    >
      <div
        class=MuiTypography-root MuiTypography-body whitespace-pre-line css-hash-MuiTypography-root
        data-test="body"
      >
        Test Description
      </div>
    </div>
  </div>
  <div
    class="flex shrink-0 flex-col-reverse flex-wrap justify-end gap-3 px-8 py-4 shadow-t md:flex-row"
  >
    <button
      data-test="dialog-action"
    >
      OK
    </button>
  </div>
</div>
`;
